--- a/setup.cfg
+++ b/setup.cfg
@@ -32,8 +32,8 @@ install_requires =
     prometheus-aioexporter >= 1.5.1
     python-dateutil
     PyYAML
-    SQLAlchemy
-    sqlalchemy_aio
+    SQLAlchemy <= 1.3.7
+    sqlalchemy_aio <= 0.15.0
     toolrack >= 3.0.0
 packages = find:
 include_package_data = True
